--- a/test1.tex
+++ b/test1.tex
@@ -1,10 +1,6 @@
-\begin{algo}{puissance}{a,b}
-    \SET p = 1
-    \RETURN p
-    \end{algo}
-    
-    \begin{algo}{puissancerec}{a,b}
-    \RETURN 1
-    \end{algo}
-    
-    \CALL{puissancerec}{2,3}
+\begin{algo}{double}{x}
+    \SET{y}{x + x}
+    \RETURN{y}
+  \end{algo}
+  
+  \CALL{double}{5}
